# rust-sorty

./: Cargo.toml  EXAMPLE.md  README.md  SAMPLE.md
src/: lib.rs  sorter.rs  sorty.rs
