[package]
name = "sorty"
description = "A plugin to check whether the 'extern crate', 'mod' and 'use' declarations are in their sorted format"

repository = "https://github.com/Wafflespeanut/rust-sorty"
readme = "README.md"
license = "MPL-2.0"

version = "0.1.2"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
keywords = ["sort", "lint", "plugin", "declaration"]

[lib]
name = "sorty"
plugin = true
